--- a/google_flickr_api/packages.config
+++ b/google_flickr_api/packages.config
@@ -3,6 +3,7 @@
   <package id="Angular.UI.Bootstrap" version="0.13.3" targetFramework="net452" />
   <package id="angularjs" version="1.4.4" targetFramework="net452" />
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net452" />
   <package id="jQuery" version="1.9.1" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
