Added initial start page. Added function for loading next photos and some error handling. Added styling for desktop and mobile.

--- a/google_flickr_api/google_flickr_api.csproj
+++ b/google_flickr_api/google_flickr_api.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\start\start.controller.js" />
+    <Content Include="app\start\start.html" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="fonts\fontawesome-webfont.svg" />
